--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="app.js" defer></script>
+    <title>Músicas e Álbuns</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Olá mundo</h1>
+<body class="bg-success">
+
+    <header class="bg-black text-white text-center py-4">
+        <h1>Músicas e Álbuns</h1>
+    </header>
+
+    <nav class="bg-secondary py-2">
+        <div class="container d-flex justify-content-around">
+            <a class="a text-white text-decoration-none" href="#">Álbuns</a>
+            <a class="a text-white text-decoration-none" href="#">Faixas</a>
+            <a class="a text-white text-decoration-none" href="#">Artistas</a>
+            <a class="a text-white text-decoration-none" href="#">Sobre</a>
+        </div>
+    </nav>
+
+    <main class="container my-4">
+        <div class="row">
+            <aside class="col-md-4 mb-4 text-center bg-secondary p-3 rounded">
+                <h2>Álbuns</h2>
+                <iframe class="w-100 rounded mb-3"
+                    src="https://open.spotify.com/embed/album/3lXVOBlBz0s2iun2ocA5Gn?utm_source=generator"
+                    height="352" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe class="w-100 rounded"
+                    src="https://open.spotify.com/embed/album/3VGvkH5X8bhjIV0rSohaVU?utm_source=generator"
+                    height="352" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </aside>
+
+            <section class="col-md-8 faixas">
+                <h3>Faixa 1</h3>
+                <iframe class="w-100 rounded musica mb-3"
+                    src="https://open.spotify.com/embed/track/78LW2UJ7LSnHKwIWjmpXR0?utm_source=generator"
+                    height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+                <h3>Faixa 2</h3>
+                <iframe class="w-100 rounded musica mb-3"
+                    src="https://open.spotify.com/embed/track/4zVaPRho7i7z68Au6gVAmz?utm_source=generator&theme=0"
+                    height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+                <h3>Faixa 3</h3>
+                <iframe class="w-100 rounded musica mb-3"
+                    src="https://open.spotify.com/embed/track/0GsQzTpegvifzQZ4wXsCZ2?utm_source=generator"
+                    height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+                <h3>Faixa 4</h3>
+                <iframe class="w-100 rounded musica"
+                    src="https://open.spotify.com/embed/track/3TkmRBNFdG6cOQSvKMpYlC?utm_source=generator&theme=0"
+                    height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </section>
+        </div>
+    </main>
+
+    <section class="info container text-center my-5">
+        <div class="row g-3 justify-content-center">
+            <div class="col-md-4">
+                <div class="card bg-dark text-white p-3">
+                    <h3>Origem do Trap</h3>
+                    <p>O Trap surgiu nos EUA como um subgênero do hip-hop, misturando batidas pesadas e letras intensas.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark text-white p-3">
+                    <h3>Artistas em Alta</h3>
+                    <p>Jovens talentos estão dominando o cenário nacional com produções criativas e inovadoras.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark text-white p-3">
+                    <h3>Top 100</h3>
+                    <p>Conheça o top 100 das músicas mais ouvidas.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-black text-white text-center py-3">
+        <p><strong>&copy; 2025 Lucas. Todos os direitos reservados.</strong></p>
+        <p>
+            <a class="a2 text-white text-decoration-none me-3" href="https://www.instagram.com/">Instagram</a>
+            <a class="a2 text-white text-decoration-none me-3" href="https://open.spotify.com/intl-pt/">Spotify</a>
+            <a class="a2 text-white text-decoration-none" href="https://www.youtube.com/">YouTube</a>
+        </p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
